--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -1,6 +1,7 @@
 fastapi==0.115.6
 uvicorn==0.34.0
 psycopg[binary]==3.2.3
+psycopg-pool==3.2.4
 python-jose[cryptography]==3.3.0
 pydantic==2.10.4
 python-dotenv==1.0.1
